Changed Wahhab's connection to use ApplicationDB.